--- a/css/style.css
+++ b/css/style.css
@@ -600,7 +600,7 @@ body {
   top: 7%;
   width: 85%;
   height: 85%;
-  background-image: url(/img/gallery.svg);
+  background-image: url(../img/gallery.svg);
   background-repeat: no-repeat;
   background-position: center center;
   background-color: rgba(0, 0, 0, 0.5);
@@ -739,7 +739,7 @@ body {
   right: 0;
   bottom: 0;
   opacity: 0;
-  background-image: url(/img/check.svg);
+  background-image: url(../img/check.svg);
   background-repeat: no-repeat;
   background-size: 4px 4px;
   background-position: center;
