--- a/css/media.css
+++ b/css/media.css
@@ -311,15 +311,15 @@
   }
 
   .header-swiper__slide1 {
-    background-image: url(/img/header-swiper/768/swiper-1.jpg);
+    background-image: url(../img/header-swiper/768/swiper-1.jpg);
   }
 
   .header-swiper__slide2 {
-    background-image: url(/img/header-swiper/768/swiper-2.jpg);
+    background-image: url(../img/header-swiper/768/swiper-2.jpg);
   }
 
   .header-swiper__slide3 {
-    background-image: url(/img/header-swiper/768/swiper-3.jpg);
+    background-image: url(../img/header-swiper/768/swiper-3.jpg);
   }
 
   .header {
